@@ -1,3 +1,9 @@
+2014-02-12 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>
+
+	* src/stm8/gen.c,
+	  support/regression/tests/bug-2252.c:
+	  Fix bug #2252.
+
 2014-02-09 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/stm8/gen.c
